add time encoding in java