@@ -10,17 +10,33 @@ encode / decode
 | json4s | https://github.com/json4s/json4s |
 
 
-```scala
-scala> val om = new ObjectMapper
-om: com.fasterxml.jackson.databind.ObjectMapper = com.fasterxml.jackson.databind.ObjectMapper@5a9adbb4
 
-scala> val json = om.readTree("""{"config": [{ "name": "a"}, {"name": "b"}] }""")
-json: com.fasterxml.jackson.databind.JsonNode = {"config":[{"name":"a"},{"name":"b"}]}
+```java
+// find ~/.m2/repository/ -name "*.jar" | tr '\n' ':'
 
-scala> json.at("/config").forEach(a => println(a.at("/name")))
-"a"
-"b"
+jshell --class-path $(find ~/.m2/repository/com/fasterxml/ -name "*.jar" | tr '\n' ':') --enable-preview
+|  Welcome to JShell -- Version 12.0.1
+|  For an introduction type: /help intro
 
+jshell> import com.fasterxml.jackson.databind.ObjectMapper
+
+jshell> var om = new ObjectMapper()
+om ==> com.fasterxml.jackson.databind.ObjectMapper@30a3107a
+
+jshell> import com.fasterxml.jackson.core.*
+jshell> var json = om.readTree("{\"config\": [{ \"name\": \"a\"}, {\"name\": \"b\"}] }")
+json ==> {"config":[{"name":"a"},{"name":"b"}]}
+
+jshell> import com.fasterxml.jackson.core.JsonPointer
+jshell> json.at("/config")
+$12 ==> [{"name":"a"},{"name":"b"}]
+
+jshell> json.at("/config").forEach(v -> System.out.println(v))
+{"name":"a"}
+{"name":"b"}
+```
+
+```java
 scala> val json = om.readTree("""{"config": [{ "name": "a"}, {"name": "b"}, {"name": ""}] }""")
 json: com.fasterxml.jackson.databind.JsonNode = {"config":[{"name":"a"},{"name":"b"},{"name":""}]}
 
